--- a/article/templates/article/article_page.html
+++ b/article/templates/article/article_page.html
@@ -7,9 +7,11 @@
 
 
     {% for block in page.body %}
+
       {% if block.block_type == 'Hero' %}
         {% image block.value.hero_image original as cover %}
-        <div class="jumbotron jumbotron-fluid" style='background:url({{cover.url}}) center center no-repeat;background-size:cover'>
+
+        <div class="jumbotron jumbotron-fluid " style='background:url({{cover.url}}) center center no-repeat;background-size:cover'>
              <div class='container'>
                  <div class='useavatar col-md-6 '>
 
@@ -30,25 +32,76 @@
            </div>
         </div>
       {% elif  block.block_type == 'Paragraph' %}
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid ">
                <div class='container'>
                  <p class='lead'>{{ block.value.text | richtext}} </p>
                </div>
         </div>
-      {% else %}
-       <div class="jumbotron jumbotron-fluid bg-inverse" >
-           <div class='container'>
-             {% image block.value.footer_image original as profile %}
-               <div class='useavatar col-md-6 '>
-                   <img src='{{profile.url}}' class='img-rounded' >
-               </div>
+      {% elif block.block_type == 'Carousel' %}
 
-               <div class='col-md-6'>
-                  <p class='lead card-text' style='background:springgreen'>{{block.value.footer_text | richtext}}</p>
-              </div>
 
+          <div id="carousel-example-generic" class=" carousel slide bg-inverse" style="max-height=500" data-ride="carousel">
+
+
+              <ol class="carousel-indicators">
+                {% for item in block.value %}
+                  {% if forloop.counter0 == 0 %}
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                  {% else %}
+                    <li data-target="#carousel-example-generic" data-slide-to="{{forloopcounter0}}" ></li>
+                  {% endif %}
+                {% endfor %}
+              </ol>
+
+            <div class="carousel-inner container" role="listbox">
+              {% for item in block.value %}
+
+                {% image item.slide.Image original as slideImage %}
+                  {% if forloop.counter0 == 0 %}
+                    <div class="carousel-item active">
+                      <img src='{{slideImage.url}}'  alt="{{slideImage}}">
+                      <div class="carousel-caption">
+                        {{item.slide.Caption}}
+                      </div>
+                    </div>
+                  {% else %}
+                  <div class="carousel-item text-center " >
+                    <img src='{{slideImage.url}}' alt="{{slideImage}}">
+                    <div class="carousel-caption">
+                      {{item.slide.Caption}}
+                    </div>
+                  </div>
+                  {% endif %}
+             {% endfor %}
+            </div>
+
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="icon-prev" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="icon-next" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-       </div>
+
+
+        {% else %}
+
+         <div class="jumbotron jumbotron-fluid bg-inverse" >
+             <div class='container'>
+               {% image block.value.footer_image original as profile %}
+                 <div class='useavatar col-md-6 '>
+                     <img src='{{profile.url}}' class='img-rounded' >
+                 </div>
+
+                 <div class='col-md-6'>
+                    <p class='lead card-text' style='background:springgreen'>{{block.value.footer_text | richtext}}</p>
+                </div>
+
+            </div>
+        </div>
+
 
       {% endif %}
 
